force-app/main/default/objects/Sales_Order__c/Sales_Order__c.object-meta.xml
<CustomObject>
    <description>This object will be used to create records for the purpose of invoicing</description>
    <label>Sales Order</label>
    <nameField>
        <displayFormat>SO-{000000}</displayFormat>
        <label>Sales Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>