force-app/main/default/objects/Sales_Order__c/fields/Call__c.field-meta.xml
<CustomField>
    <fullName>Call__c</fullName>
    <formula>Work_Order__r.WorkOrderNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field shows work order number</inlineHelpText>
    <label>Call #</label>
    <type>Text</type>
</CustomField>