force-app/main/default/objects/Sales_Order__c/fields/Company_Code__c.field-meta.xml
<CustomField>
    <fullName>Company_Code__c</fullName>
    <formula>IF( ISBLANK(Service_Contract__r.Project_Code__c),Service_Territory__r.Branch_Code__c,  Service_Contract__r.Project_Code__c)</formula>
    <inlineHelpText>Shows &quot;Project Code&quot; from the Service Contract. If it is not populated it shows &quot;Branch Code&quot; information from the related Service Territory</inlineHelpText>
    <label>Company / Project Code</label>
    <type>Text</type>
</CustomField>