force-app/main/default/objects/Sales_Order__c/fields/Confirm_action__c.field-meta.xml
<CustomField>
    <fullName>Confirm_action__c</fullName>
    <label>Press Save to confirm Pronto Update</label>
    <length>255</length>
    <type>Text</type>
</CustomField>