force-app/main/default/objects/Sales_Order__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <defaultValue>&quot;AUD&quot;</defaultValue>
    <label>Currency</label>
    <length>8</length>
    <type>Text</type>
</CustomField>