force-app/main/default/objects/Sales_Order__c/fields/Customer_No__c.field-meta.xml
<CustomField>
    <fullName>Customer_No__c</fullName>
    <formula>Account__r.Account_Code_Formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field shows account&#39;s &quot;Account Code&quot; information</inlineHelpText>
    <label>Customer No</label>
    <type>Text</type>
</CustomField>