force-app/main/default/objects/Sales_Order__c/fields/Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <defaultValue>&quot;N&quot;</defaultValue>
    <label>Customer Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>