force-app/main/default/objects/Sales_Order__c/fields/Days_till_Integration__c.field-meta.xml
<CustomField>
    <fullName>Days_till_Integration__c</fullName>
    <description>Indicate how many till this sales order is pushed to Pronto</description>
    <formula>If(Order_Date__c - Today() + 2 &lt; 0, 0,Order_Date__c - Today() + 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days till integration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>