force-app/main/default/objects/Sales_Order__c/fields/Initial_Findings__c.field-meta.xml
<CustomField>
    <fullName>Initial_Findings__c</fullName>
    <label>Initial Findings</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>