force-app/main/default/objects/Sales_Order__c/fields/Poject_Code__c.field-meta.xml
<CustomField>
    <fullName>Poject_Code__c</fullName>
    <description>Hold project for integration purposes</description>
    <formula>Service_Contract__r.Project_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Poject Code</label>
    <type>Text</type>
</CustomField>