force-app/main/default/objects/Sales_Order__c/fields/Pre_Purchased_Hours_Detail__c.field-meta.xml
<CustomField>
    <fullName>Pre_Purchased_Hours_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pre Purchased Hours Detail</label>
    <referenceTo>Pre_Purchased_Hours_Detail__c</referenceTo>
    <relationshipLabel>Sales Orders</relationshipLabel>
    <relationshipName>Sales_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>