force-app/main/default/objects/Sales_Order__c/fields/Project_Category__c.field-meta.xml
<CustomField>
    <fullName>Project_Category__c</fullName>
    <defaultValue>&quot;000&quot;</defaultValue>
    <label>Project Category</label>
    <length>80</length>
    <type>Text</type>
</CustomField>