force-app/main/default/objects/Sales_Order__c/fields/Pronto_Sales_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Pronto_Sales_Order_Number__c</fullName>
    <label>Pronto Sales Order Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>