force-app/main/default/objects/Sales_Order__c/fields/Reported_Fault__c.field-meta.xml
<CustomField>
    <fullName>Reported_Fault__c</fullName>
    <label>Reported Fault</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>