force-app/main/default/objects/Sales_Order__c/fields/Sales_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Type__c</fullName>
    <label>Sales Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre Purchased Hours</fullName>
            </value>
            <value>
                <fullName>Work Order</fullName>
            </value>
            <value>
                <fullName>Contract Fees</fullName>
            </value>
            <value>
                <fullName>Service Billing Cycle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>