force-app/main/default/objects/Sales_Order__c/fields/Sales_Type__c.field-meta.xml
<CustomField>
    <fullName>Sales_Type__c</fullName>
    <formula>Service_Territory__r.Pronto_Territory_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Type</label>
    <type>Text</type>
</CustomField>