force-app/main/default/objects/Sales_Order__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <formula>IF( Account__r.RecordType.DeveloperName = &#39;Cash_Account_RT&#39;,
 Account__r.BillingStreet  + &quot; &quot;+ Account__r.BillingCity + &quot; &quot; +  Account__r.BillingPostalCode +  &quot; &quot; + Account__r.BillingState,
Service_Contract__r.ShippingStreet + &quot; &quot;+ Service_Contract__r.ShippingCity + &quot; &quot; +  Service_Contract__r.ShippingPostalCode +  &quot; &quot; + Service_Contract__r.ShippingState )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field shows service contract&#39;s address information</inlineHelpText>
    <label>Site</label>
    <type>Text</type>
</CustomField>