force-app/main/default/objects/Sales_Order__c/fields/TECH_Company_Code__c.field-meta.xml
<CustomField>
    <fullName>TECH_Company_Code__c</fullName>
    <description>Holds company code for integration purposes</description>
    <formula>Service_Territory__r.Branch_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Code</label>
    <type>Text</type>
</CustomField>