force-app/main/default/objects/Sales_Order__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <formula>CreatedBy.Username</formula>
    <label>User</label>
    <type>Text</type>
</CustomField>