force-app/main/default/objects/Sales_Order__c/fields/Warehouse_Code__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Code__c</fullName>
    <label>Warehouse Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BUR</fullName>
                <label>Burnie Warehouse</label>
            </value>
            <value>
                <fullName>CONS</fullName>
                <label>Consignment Stock</label>
            </value>
            <value>
                <fullName>DAN</fullName>
                <label>2/491 Hammond Rd Dandenong Sth</label>
            </value>
            <value>
                <fullName>EMBE</fullName>
                <label>Embedded Expertise</label>
            </value>
            <value>
                <fullName>HBT</fullName>
                <label>Hobart Warehouse</label>
            </value>
            <value>
                <fullName>KATH</fullName>
                <label>NT - Katherine Warehouse</label>
            </value>
            <value>
                <fullName>LST</fullName>
                <label>Launceston Warehouse</label>
            </value>
            <value>
                <fullName>MAIN</fullName>
                <label>Main Warehouse</label>
            </value>
            <value>
                <fullName>NSW</fullName>
                <label>North Ryde Warehouse</label>
            </value>
            <value>
                <fullName>NT</fullName>
                <label>Northern Territory Warehouse</label>
            </value>
            <value>
                <fullName>NUKO</fullName>
                <label>Nukon Company Warehouse</label>
            </value>
            <value>
                <fullName>QLD</fullName>
                <label>Electronics St Warehouse</label>
            </value>
            <value>
                <fullName>SKL</fullName>
                <label>Skills Lab Warehouse</label>
            </value>
            <value>
                <fullName>TONS</fullName>
                <label>Tonsley Warehouse</label>
            </value>
            <value>
                <fullName>VIC</fullName>
                <label>2/216 Turner St Port Melbourne</label>
            </value>
            <value>
                <fullName>WA</fullName>
                <label>WA Warehouse</label>
            </value>
            <value>
                <fullName>WHY</fullName>
                <label>Whyalla Warehouse</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>