force-app/main/default/objects/Sales_Order__c/recordTypes/AggregatedBilling_SalesOrder_RT.recordType-meta.xml
<RecordType>
    <fullName>AggregatedBilling_SalesOrder_RT</fullName>
    <active>true</active>
    <label>Aggregated Billing</label>
</RecordType>