force-app/main/default/objects/Sales_Order__c/recordTypes/ContractFees_SalesOrder_RT.recordType-meta.xml
<RecordType>
    <fullName>ContractFees_SalesOrder_RT</fullName>
    <active>true</active>
    <label>Contract Fees</label>
</RecordType>