force-app/main/default/objects/Sales_Order__c/recordTypes/PrePurchasedHours_SalesOrder_RT.recordType-meta.xml
<RecordType>
    <fullName>PrePurchasedHours_SalesOrder_RT</fullName>
    <active>true</active>
    <label>Pre Purchased Hours</label>
</RecordType>