force-app/main/default/objects/Sales_Order__c/recordTypes/WorkOrder_SalesOrder_RT.recordType-meta.xml
<RecordType>
    <fullName>WorkOrder_SalesOrder_RT</fullName>
    <active>true</active>
    <label>Work Order</label>
</RecordType>