force-app/main/default/objects/Sales_Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Account__c</columns>
    <columns>Service_Territory__c</columns>
    <columns>Service_Contract__c</columns>
    <columns>Work_Order__c</columns>
    <columns>Customer_Reference__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Days_till_Integration__c</columns>
    <columns>Integration_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Sales Orders</label>
</ListView>