force-app/main/default/objects/Sales_Order__c/listViews/Sales_Order_Pending_Pronto_Integration_LV.listView-meta.xml
<ListView>
    <fullName>Sales_Order_Pending_Pronto_Integration_LV</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Service_Territory__c</columns>
    <columns>Service_Contract__c</columns>
    <columns>Account__c</columns>
    <columns>Pronto_Sales_Order_Number__c</columns>
    <columns>Days_till_Integration__c</columns>
    <columns>Integration_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Integration_Status__c</field>
        <operation>equals</operation>
        <value>Integration Pending</value>
    </filters>
    <label>Sales Order Pending Pronto Integration</label>
</ListView>